--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control form-control-user" id="txtEmail"
+                                <input type="email" class="form-control form-control-user" id="txtCorreo"
                                        placeholder="Email">
                             </div>
                             <div class="form-group row">
